--- a/Personajes/HuoHuo.html
+++ b/Personajes/HuoHuo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dan Heng - Imbibitor Lunae</title>
+    <title>Huo Huo</title>
     <meta name="description" content="Esto es la descripción de mi página web">
     <meta name="keywords" content="html, ejercicio, ejercicio1, ejemplo">
     <meta name="author" content="Dario Valle">
@@ -20,15 +20,15 @@
         <a href="../Tienda.html"><input type="button" value="Tienda" style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;"></a>
     </header>
     <div style="background-color: black; width: 50%; margin-top: 8%;margin-left: 25%; opacity: 90%; padding: 1%;">
-        <table border="1" style="color: white; float: right; background-color: black; text-align: center; border-collapse:collapse; border: 1px solid orange;">
+        <table border="1" style="color: white; float: right; background-color: black; text-align: center; border-collapse:collapse; border: 1px solid orange; width: 20%;">
             <tr>
-                <th style="background-color: aqua;" colspan="2">Dan Heng - Imbibitor Lunae</th>
+                <th style="background-color: green;" colspan="2">Huo Huo</th>
             </tr>
             <tr>
-                <td colspan="2" style="color: burlywood;">Alto Anciano de una Era Pasada</td>
+                <td colspan="2" style="color: burlywood;">La maldita</td>
             </tr>
             <tr>
-                <td colspan="2"><img src="../assets/img/SplashArtImbiitor.png" alt="Dan Heng - Imbibitor Lunae"></td>
+                <td colspan="2"><img src="../assets/img/SplashArtHuo.png" alt="Huo Huo"></td>
             </tr>
             <tr>
                 <td style="text-align: right; color: burlywood;">Rareza:</td>
@@ -36,17 +36,18 @@
             </tr>
             <tr>
                 <td style="text-align: right; color: burlywood;">Tipo:</td>
-                <td>Imaginario</td>
+                <td>Viento</td>
             </tr>
             <tr>
                 <td style="text-align: right; color: burlywood;">Facción:</td>
-                <td>Destrucción</td> 
+                <td>Abundancia</td> 
             </tr>
         </table>
-        <p style="color: white; padding: 2%; border: 2px solid aqua; width: 21%;"><i>"No soy la sombra de nadie."</i></p><br><br>
+        <p style="color: white; padding: 2%; border: 2px solid green; width: 60%;"><i>"Puedo usar este estandarte para ahuyentar demonios... pero también es útil para señalar mi rendición..."
+</i></p><br><br>
         <span style="color: white;">
-            <p>La verdadera forma de Vidyadhara de Dan Heng, revelada tras aceptar los poderes residuales de la reencarnación anterior de "Imbibitor Lunae". Al aceptar los majestuosos cuernos en la cima de su corona, debe aceptar todos los méritos y defectos atribuidos a esa persona.</p>
-            <p>Sin embargo, él nunca fue él mismo.</p>
+            <p style="width: 70%;">Una chica foxiana pitiable e indefensa que también es una jueza en formación de la Comisión de los Diez Señores, que teme a los fantasmas pero debe atraparlos. Debido a tener un heliobús llamado Tail sellado en su cola por los jueces de la Comisión de los Diez Señores, se convirtió en una "maldita" que atrae a seres inhumanos.</p>
+            <p style="width: 70%;">Ella teme a los demonios y a los heliobis, pero, por el contrario, se le encarga su captura y se le confía la pesada tarea de erradicar espíritus viles. Aunque se considera carente de habilidad, no puede reunir el valor para renunciar y sigue adelante a pesar de caminar en un valle de su propio miedo.</p>
         </span>
         <table border="1" style="border-collapse: collapse; border: solid 4px white; color: white;">
             <tr style="border-bottom:solid 4px white ;">
@@ -65,19 +66,17 @@
         </table><br><br><br>
         <span style="color: white;">
             <h1 id="A">Ataque basico</h1>
-            <p><b>Loto Benéfico:</b> Utiliza un ataque de 2 golpes y causa DMG Imaginario igual al 50% del ATK de Dan Heng • Imbibitor Lunae a un único objetivo enemigo.</p>
-            <p><b>Transcendencia:</b><br> Utiliza un ataque de 3 golpes y causa daño imaginario igual al 130% del ATK de Dan Heng • Imbibitor Lunae a un único objetivo enemigo.</p>
-            <p><b>Lanza divina:</b><br> Utiliza un ataque de 5 golpes y causa DMG Imaginario igual al 190% del ATK de Dan Heng • Imbibitor Lunae a un único objetivo enemigo. A partir del cuarto golpe, causa simultáneamente DMG Imaginario igual al 30% del ATK de Dan Heng • Imbibitor Lunae a los objetivos adyacentes.</p>
-            <p><b>Salto relampago:</b><br> Utiliza un ataque de 7 golpes y causa DMG Imaginario igual al 250% del ATK de Dan Heng • Imbibitor Lunae a un único objetivo enemigo. A partir del cuarto golpe, causa simultáneamente DMG Imaginario igual al 90% del ATK de Dan Heng • Imbibitor Lunae a los objetivos adyacentes.</p>
+            <p><b>Banner:</b> Llamador de tormentas: Inflige daño de viento equivalente al 25% de la HP máxima de Huohuo a un enemigo objetivo.</p>
             <video src=""></video>
             <h1 id="H">Habilidad</h1>
-            <p><b>Dracore Libre:</b> Mejora el ATQ básico. Las mejoras se pueden aplicar hasta 3 veces de forma consecutiva. Usar esta habilidad no consume Puntos de Habilidad y no se considera como usar una Habilidad. <br> • Mejorado una vez, Loto Benefactor se convierte en Trascendencia. <br> • Mejorado dos veces, Loto Benefactor se convierte en Lanza Divina. <br> • Mejorado 3 veces, Loto Benefactor se convierte en Salto Fulgurante. <br> Al usar Lanza Divina o Salto Fulgurante, a partir del cuarto golpe, se gana 1 carga de Outroar antes de cada golpe. Cada carga de ''Outroar'' aumenta el DMG CRIT de Imbibitor Lunae en un 6.0% hasta un máximo de 4 cargas. Estas cargas duran hasta el final de su turno.</p>
+            <p><b>Talisman; Protección:</b> Disipa 1 debuff(s) de un aliado objetivo único y restaura inmediatamente los HP de este aliado en una cantidad igual al 14% de los HP máximos de Huohuo más 140. Al mismo tiempo, restaura HP para los aliados que están adyacentes a este aliado objetivo en una cantidad igual al 11.2% de los HP máximos de Huohuo más 112.</p>
             <video src=""></video>
             <h1 id="U">Ultimate</h1>
-            <p><b>Ablutes All de Azure Aqua:</b> Utiliza un ataque de 3 golpes y causa daño imaginario del 180% del ATK de Imbibitor Lunae a un solo objetivo. Al mismo tiempo, causa daño imaginario igual al 84% del ATK de Imbibitor Lunae a enemigos adyacentes. Luego, obtiene 2 Squama Sacrosancta. Es posible tener hasta 3 Squama Sacrosancta, que se pueden usar para compensar el consumo de puntos de habilidad de Imbibitor Lunae. Consumir Squama Sacrosancta se considera equivalente a consumir puntos de habilidad.</p>
+            <p><b>Cola; Dominación Espiritual:</b> Regenera Energía para todos los aliados (excluyendo a este personaje) en una cantidad igual al **15%** de su Energía Máxima respectiva. Al mismo tiempo, aumenta su ATQ en un 24% durante 2 turnos.</p>
             <video src=""></video>
             <h1 id="P">Pasiva</h1>
-            <p><b>Corazón Justo:</b> Después de cada golpe durante un ataque, Dan Heng - Imbibitor Lunae obtiene Corazón Justo, lo que aumenta su Daño en un 5.0%. Este efecto puede acumularse hasta 6 veces, y dura hasta el final de su turno.</p>
+            <p><b>Posesión:</b> Metaflujo Etéreo: Después de usar su Habilidad, Huohuo gana Provisión Divina, que dura 2 turno(s). Esta duración disminuye en 1 turno al inicio de cada turno de Huohuo. Si Huohuo tiene Provisión Divina cuando comienza el turno de un aliado o cuando un aliado usa su Definitiva, restaura HP para ese aliado por un monto igual al 3% de la HP Máxima de Huohuo más 30. Al mismo tiempo, cada aliado con 50% de HP o menos recibe curación una vez.</p>
+            <p>Cuando se activa la Provisión Divina para curar a un aliado, dispela 1 debuff(s) de ese aliado. Este efecto se puede activar hasta 6 veces. Usar la habilidad nuevamente restablece el conteo de activación del efecto.</p>
             <video src=""></video>
         </span>
     </div>
