--- a/Personajes.html
+++ b/Personajes.html
@@ -44,13 +44,13 @@
             <tr>
                 <td><a href="./Personajes/Seele.html"><img src="./assets/img/SeeleChibiPersonajes.png" alt="--Seele--" ></a></td>
                 <td><a href="./Personajes/Imbibitor_Lunae.html"><img src="./assets/img/InbiChibiPersonajes.png" alt="--Dan Heng - Imbibitor Lunae--" ></a></td>
-                <td><img src="./assets/img/HuoChibiPersonajes.png" alt="--Huo Huo--" ></td>
+                <td><a href="./Personajes/HuoHuo.html"><img src="./assets/img/HuoChibiPersonajes.png" alt="--Huo Huo--" ></a></td>
                 <td><img src="./assets/img/SparkleChibiPersonajes.png" alt="--Sparkle--" ></td>
             </tr>
             <tr>
                 <td><a href="./Personajes/Seele.html" style="color: white; text-decoration: none;">Seele</a></td>
                 <td><a href="./Personajes/Imbibitor_Lunae.html" style="color: white; text-decoration: none;">Dan Heng - Imbibitor Lunae</a></td>
-                <td>Huo Huo</td>
+                <td><a href="./Personajes/HuoHuo.html" style="color: white; text-decoration: none;">Huo Huo</a></td>
                 <td>Sparkle</td>
             </tr>
             <!--Sampo-->
