--- a/Personajes.html
+++ b/Personajes.html
@@ -56,11 +56,11 @@
             <!--Sampo-->
             <!--Feixiao-->
             <tr>
-                <td><img src="./assets/img/SamChibiPersonajes.png" alt="--Sampo--"></td>
+                <td><a href="./Personajes/Sampo..html"><img src="./assets/img/SamChibiPersonajes.png" alt="--Sampo--"></a></td>
                 <td><img src="./assets/img/FeixiChibiPersonajes.png" alt="--Feixiao--"></td>
             </tr>
             <tr>
-                <td>Sampo</td>
+                <td><a href="./Personajes/Sampo..html" style="color: white; text-decoration: none;">Sampo</a></td>
                 <td>Feixiao</td>
             </tr>
         </table>
