--- a/Personajes/Feixiao.html
+++ b/Personajes/Feixiao.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seele</title>
+    <title>Feixiao</title>
     <meta name="description" content="Esto es la descripción de mi página web">
     <meta name="keywords" content="html, ejercicio, ejercicio1, ejemplo">
     <meta name="author" content="Dario Valle">
@@ -20,15 +20,15 @@
         <a href="../Tienda.html"><input type="button" value="Tienda" style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;"></a>
     </header>
     <div style="background-color: black; width: 50%; margin-top: 8%;margin-left: 25%; opacity: 90%; padding: 1%;">
-        <table border="1" style="color: white; float: right; background-color: black; text-align: center; border-collapse:collapse; border: 1px solid orange; width: 25%;">
+        <table border="1" style="color: white; float: right; background-color: black; text-align: center; border-collapse:collapse; border: 1px solid orange;">
             <tr>
-                <th style="background-color: blue; color: black;" colspan="2">Seele</th>
+                <th style="background-color: yellow; color: black;" colspan="2">Feixiao</th>
             </tr>
             <tr>
-                <td colspan="2" style="color: burlywood;">Mariposa de la Tempestad</td>
+                <td colspan="2" style="color: burlywood;">La Garra del Merlín</td>
             </tr>
             <tr>
-                <td colspan="2"><img src="../assets/img/SplashArtSeele.png" alt="Castorice" style="width: 100%;"></td>
+                <td colspan="2"><img src="../assets/img/SplashArtFeix.png" alt="Feixiao"></td>
             </tr>
             <tr>
                 <td style="text-align: right; color: burlywood;">Rareza:</td>
@@ -36,16 +36,17 @@
             </tr>
             <tr>
                 <td style="text-align: right; color: burlywood;">Tipo:</td>
-                <td>Cuántico</td>
+                <td>Viento</td>
             </tr>
             <tr>
                 <td style="text-align: right; color: burlywood;">Facción:</td>
                 <td>Cacería</td> 
             </tr>
         </table>
-        <p style="color: white; padding: 2%; border: 2px solid blue; width: 60%;"><i>"Usar nuestra fuerza para crear una sociedad justa... ¿No es ese el objetivo obvio?"</i></p><br><br>
+        <p style="color: white; padding: 2%; border: 2px solid yellow; width: 60%;"><i>"‘La Garra de Merlín’ es lo que está escrito en los libros, y ‘El Gran General’ es como me llama la gente. Lo primero suena demasiado formal, lo segundo demasiado exagerado. Ninguno me conviene. Prefiero mi propio título, el ‘General Carente’ — carente de preocupaciones, arrepentimientos y rivales."</i></p><br><br>
         <span style="color: white;">
-            <p>Una valiente y enérgica miembro clave de Wildfire que creció en el peligroso Inframundo de Belobog. Está acostumbrada a valerse por sí misma. Como su apodo "Babochka" (en ruso: Бабочка Babochka, "Mariposa"), revolotea por el campo de batalla con gracia mientras causa una tormenta.</p>
+            <p>Una exesclava de guerra de los borisin, Feixiao es ahora la Garra de Merlin del Xianzhou Yaoqing y una de las Siete Generales Árbiter. Su personalidad es desenfrenada y franca, audaz y directa. Es experta en todas las formas de artes marciales y se ha perfeccionado en una arma suprema. Es ampliamente adorada por los soldados y civiles de Xianzhou como "La Gran General".</p>
+            <p>Sin embargo, ella lleva la carga de la aflicción de la Ira Lunar. Si ella fuera a cazar todas las abominaciones en su vida limitada — Entonces el único enemigo que tiene Feixiao sería ella misma.</p>
         </span>
         <table border="1" style="border-collapse: collapse; border: solid 4px white; color: white;">
             <tr style="border-bottom:solid 4px white ;">
@@ -64,16 +65,16 @@
         </table><br><br><br>
         <span style="color: white;">
             <h1 id="A">Ataque basico</h1>
-            <p><b>Golpe:</b> Inflige daño cuántico igual al 100% del ATK de Seele a un solo enemigo.</p>
+            <p><b>Boltsunder:</b> Inflige Daño de Viento igual al 100% del ATQ de Feixiao a un único enemigo.</p>
             <video src=""></video>
             <h1 id="H">Habilidad</h1>
-            <p><b>Espada Enfundada:</b> Inflige daño cuántico equivalente al 165% del ATQ de Seele a un solo enemigo. Seele gana un 25% de SPD durante 2 turno(s).</p>
+            <p><b>Waraxe:</b> Inflige daño de viento equivalente al 150% del ATQ de Feixiao a un enemigo objetivo. Luego, lanza inmediatamente 1 instancia del ataque adicional del talento contra el objetivo.</p>
             <video src=""></video>
             <h1 id="U">Ultimate</h1>
-            <p><b>Tormenta de Mariposas:</b> Seele entra en el estado mejorado y causa DMG Cuántico igual al 340% de su ATQ a un solo enemigo.</p>
+            <p><b>Terrasplit:</b> Inflige DMG de Viento a un enemigo objetivo único, hasta un 551% del ATK de Feixiao. Durante este tiempo, puede ignorar el Tipo de Debilidad para reducir la Dureza del objetivo. Cuando el objetivo no está Roto por Debilidad, la Eficiencia de Ruptura de Debilidad de Feixiao aumenta en un 100%. Durante el ataque, Feixiao primero lanza Boltsunder Blitz o Waraxe Skyward al objetivo, un total de 6 vez(es). Al final, inflige DMG de Viento igual al 128% del ATK de Feixiao al objetivo. Boltsunder Blitz: Inflige DMG de Viento igual al 48% del ATK de Feixiao al objetivo elegido. Si el objetivo está Roto por Debilidad, el multiplicador de DMG aumenta en un 22.5%. Waraxe Skyward: Inflige DMG de Viento igual al 48% del ATK de Feixiao al objetivo elegido. Si el objetivo no está Roto por Debilidad, el multiplicador de DMG aumenta en un 22.5%.</p>
             <video src=""></video>
             <h1 id="P">Pasiva</h1>
-            <p><b>Resurgimiento:</b> Entra en el estado potenciado al derrotar a un enemigo con un ATQ Básico, Habilidad o Definitiva, y recibe un turno extra. Mientras está en el estado potenciado, el DAÑO de los ataques de Seele aumenta en un 60% durante 1 turno(s). Los enemigos derrotados en el turno extra proporcionado por Resurgimiento no activarán otro Resurgimiento.</p>
+            <p><b>Thunderhunt:</b> Puede activar el Ultimate cuando Aureus Volador alcanza 6 puntos, acumulando hasta 12 puntos. Feixiao gana 1 punto de Aureus Volador por cada 2 ataques de objetivos aliados. Los ataques Ultimate de Feixiao no cuentan para este número. Después de que los compañeros de equipo de Feixiao ataquen a un objetivo enemigo, Feixiao lanza inmediatamente un ataque de seguimiento contra el objetivo principal, infligiendo DMG de Viento igual al 82.5% del ATK de Feixiao. Si no hay un objetivo principal disponible para atacar, Feixiao ataca a un enemigo aleatorio en su lugar. Este efecto solo puede activarse una vez por turno y el conteo de activaciones se restablece al inicio del turno de Feixiao. Al usar este ataque, aumenta el DMG infligido por esta unidad en un 45%, durando 2 turno(s).</p>
             <video src=""></video>
         </span>
     </div>
