--- a/Personajes.html
+++ b/Personajes.html
@@ -57,11 +57,11 @@
             <!--Feixiao-->
             <tr>
                 <td><a href="./Personajes/Sampo..html"><img src="./assets/img/SamChibiPersonajes.png" alt="--Sampo--"></a></td>
-                <td><img src="./assets/img/FeixiChibiPersonajes.png" alt="--Feixiao--"></td>
+                <td><a href="./Personajes/Feixiao.html"><img src="./assets/img/FeixiChibiPersonajes.png" alt="--Feixiao--"></a></td>
             </tr>
             <tr>
                 <td><a href="./Personajes/Sampo..html" style="color: white; text-decoration: none;">Sampo</a></td>
-                <td>Feixiao</td>
+                <td><a href="./Personajes/Feixiao.html" style="color: white; text-decoration: none;">Feixiao</a></td>
             </tr>
         </table>
     </div>
