--- a/Personajes/HuoHuo.html
+++ b/Personajes/HuoHuo.html
@@ -67,17 +67,16 @@
         <span style="color: white;">
             <h1 id="A">Ataque basico</h1>
             <p><b>Banner:</b> Llamador de tormentas: Inflige daño de viento equivalente al 25% de la HP máxima de Huohuo a un enemigo objetivo.</p>
-            <video src=""></video>
+            <video autoplay loop muted src="../assets/video/Atk basico HuoHuo.mp4" style="width: 50%;"></video>
             <h1 id="H">Habilidad</h1>
             <p><b>Talisman; Protección:</b> Disipa 1 debuff(s) de un aliado objetivo único y restaura inmediatamente los HP de este aliado en una cantidad igual al 14% de los HP máximos de Huohuo más 140. Al mismo tiempo, restaura HP para los aliados que están adyacentes a este aliado objetivo en una cantidad igual al 11.2% de los HP máximos de Huohuo más 112.</p>
-            <video src=""></video>
+            <video autoplay loop muted src="../assets/video/HuoHuo Habilidad.mp4" style="width: 50%;"></video>
             <h1 id="U">Ultimate</h1>
             <p><b>Cola; Dominación Espiritual:</b> Regenera Energía para todos los aliados (excluyendo a este personaje) en una cantidad igual al **15%** de su Energía Máxima respectiva. Al mismo tiempo, aumenta su ATQ en un 24% durante 2 turnos.</p>
-            <video src=""></video>
+            <video autoplay loop muted src="../assets/video/HuoHuo Ulti.mp4" style="width: 50%;"></video>
             <h1 id="P">Pasiva</h1>
             <p><b>Posesión:</b> Metaflujo Etéreo: Después de usar su Habilidad, Huohuo gana Provisión Divina, que dura 2 turno(s). Esta duración disminuye en 1 turno al inicio de cada turno de Huohuo. Si Huohuo tiene Provisión Divina cuando comienza el turno de un aliado o cuando un aliado usa su Definitiva, restaura HP para ese aliado por un monto igual al 3% de la HP Máxima de Huohuo más 30. Al mismo tiempo, cada aliado con 50% de HP o menos recibe curación una vez.</p>
             <p>Cuando se activa la Provisión Divina para curar a un aliado, dispela 1 debuff(s) de ese aliado. Este efecto se puede activar hasta 6 veces. Usar la habilidad nuevamente restablece el conteo de activación del efecto.</p>
-            <video src=""></video>
         </span>
     </div>
 </body>
