--- a/Personajes/Sparkle.html
+++ b/Personajes/Sparkle.html
@@ -65,7 +65,7 @@
         <span style="color: white;">
             <h1 id="A">Ataque basico</h1>
             <p><b>Monodrama:</b> Inflige Daño Cuántico igual al 100% del ATQ de Sparkle a un enemigo único.</p>
-            <video autoplay loop muted src="../assets/video/Atk basico Sparkle.mp4" style="width: 50%;"></video>
+            <video autoplay loop muted src="../assets/video/Atk basico SparkleZ.mp4" style="width: 50%;"></video>
             <h1 id="H">Habilidad</h1>
             <p><b>Dreamdiver:</b> Aumenta el Daño CRÍTICO de un aliado objetivo en un 18% del Daño CRÍTICO de Sparkle más un 36%, durante 1 turno. Al mismo tiempo, adelanta la acción de este aliado en un 50%. Cuando Sparkle usa esta habilidad sobre sí misma, el efecto de Avance de Acción no se activará.</p>
             <video autoplay loop muted src="../assets/video/Sparkle Habilidad.mp4" style="width: 50%;"></video>
