--- a/Personajes/Evernight.html
+++ b/Personajes/Evernight.html
@@ -67,16 +67,15 @@
         <span style="color: white;">
             <h1 id="A">Ataque basico</h1>
             <p><b>El Tiempo se Difumina:</b> Inflige daño de hielo equivalente al 25% de la HP máxima de Evernight a un enemigo designado.</p>
-            <video src=""></video>
+            <video autoplay loop muted src="../assets/video/Atk basico Evernight.mp4" style="width: 50%;"></video>
             <h1 id="H">Habilidad</h1>
             <p><b>Día se deslizas suavemente:</b> Consume el 10% de los HP actuales de Evernight para invocar a la memosprite Evey y aumenta el DMG CRIT de todas las memosprites aliadas en una cantidad igual al 12% del DMG CRIT de Evernight durante 2 turno(s). La duración disminuye en 1 al comienzo de cada uno de los turnos de Evernight. Si Evey ya está en el campo, restaura el 50% de su HP máximo. Al usarse, gana 2 "Memoria." Si está en el estado de "Adivinanza más oscura", gana 12 "Memoria" adicionales.</p>
-            <video src=""></video>
+            <video autoplay loop muted src="../assets/video/Habilidad Evernight.mp4" style="width: 50%;"></video>
             <h1 id="U">Ultimate</h1>
             <p><b>Oh Mundo Despierto, Buenas Noches:</b> Invoca al memosprite Evey, luego el memosprite Evey inflige DMG de Hielo igual al 100% de la HP Máx de Evey a todos los enemigos, y hace que Evernight entre en el estado de "Enigma Más Oscuro". Durante este estado, el DMG recibido por todos los enemigos aumenta en un 15%, el DMG infligido por Evernight y el memosprite Evey aumenta en un 30%, y tanto Evernight como el memosprite Evey son inmunes a los debuffs de Control de Multitudes. Gana 2 Carga(s) de "Enigma Más Oscuro". El memosprite Evey consume 1 Carga después de usar "Sueño, Disolviéndose, como Rocío". Al inicio del turno de Evernight, si no quedan Cargas, sale del estado de "Enigma Más Oscuro".</p>
-            <video src=""></video>
+            <video autoplay loop muted src="../assets/video/Ulti Evernight.mp4" style="width: 50%;"></video>
             <h1 id="P">Pasiva</h1>
             <p><b>CONMIGO, ESTA NOCHE:</b> Al entrar en combate, invoca a la memosprite Evey. La memosprite Evey tiene 160 de SPD por defecto, y su HP máximo es el 50% del HP máximo de Evernight. Cada vez que Evernight o la memosprite Evey pierden HP, aumenta el DMG CRIT para esta unidad y la memosprite Evey en un 30% durante 2 turno(s), y gana 2 "Memoria." Este efecto solo puede activarse una vez por objetivo por ataque. Cuando Evernight tiene 16 o más "Memoria," se disipa y se vuelve inmune a los debuffs de Control de Multitudes. Si la memosprite Evey está en el campo, toma acción de inmediato. El efecto de acción inmediata solo puede activarse nuevamente después de que la memosprite Evey use "Sueño, Disolviéndose, como Rocío."</p>
-            <video src=""></video>
         </span>
     </div>
 </body>
