--- a/Personajes/Hyacyne.html
+++ b/Personajes/Hyacyne.html
@@ -66,16 +66,15 @@
         <span style="color: white;">
             <h1 id="A">Ataque basico</h1>
             <p><b>Cuando la Brisa Beso al Cirro:</b> Inflige DMG de Viento igual al 50% de la HP Máx de Hyacine a un objetivo enemigo designado.</p>
-            <video src=""></video>
+            <video autoplay loop muted src="../assets/video/Atk basico Hyacine.mp4" style="width: 50%;"></video>
             <h1 id="H">Habilidad</h1>
             <p><b>Amor sobre el arcoíris:</b> Invoca a memosprite Pequeña Ica, restaura HP igual al 6.4% del HP máximo de Hyacine más 124 para todos los aliados excepto Pequeña Ica, y restaura HP igual al 8.0% del HP máximo de Hyacine más 155 para Pequeña Ica.</p>
-            <video src=""></video>
+            <video autoplay loop muted src="../assets/video/Habilidad Hyacine.mp4" style="width: 50%;"></video>
             <h1 id="U">Ultimate</h1>
             <p><b>Nosotros que volamos hacia el crepúsculo:</b> Convoca a memosprite Pequeña Ica, restaura HP igual al 8.0% del HP máximo de Hyacine más 155 para todos los aliados excepto Pequeña Ica, y restaura HP igual al 9.6% del HP máximo de Hyacine más 186 para Pequeña Ica. Hyacine entra en el estado "Después de la Lluvia" durante 3 turno(s) después. Reduce la duración del estado en 1 turno cada vez que comienza el turno de Hyacine. Cuando está en estado "Después de la Lluvia", aumenta el HP máximo para todos los aliados en un 22.5% + 465.</p>
-            <video src=""></video>
+            <video autoplay loop muted src="../assets/video/Ulti Hyacine.mp4" style="width: 50%;"></video>
             <h1 id="P">Pasiva</h1>
             <p><b>La Primera Luz Sana el Mundo:</b> el memosprite Pequeña Ica tiene inicialmente HP máximo igual al 50% del HP máximo de Hyacine. Cuando Hyacine o Pequeña Ica proporcionan curación, aumenta el daño infligido por Pequeña Ica en un 60% durante 2 turno(s). Se acumula hasta 3 vez(es).</p>
-            <video src=""></video>
         </span>
     </div>
 </body>
