--- a/Personajes/Imbibitor_Lunae.html
+++ b/Personajes/Imbibitor_Lunae.html
@@ -72,10 +72,10 @@
             <video autoplay loop muted src="../assets/video/Atk basico Imbibitor.mp4" style="width: 50%;"></video>
             <h1 id="H">Habilidad</h1>
             <p><b>Dracore Libre:</b> Mejora el ATQ básico. Las mejoras se pueden aplicar hasta 3 veces de forma consecutiva. Usar esta habilidad no consume Puntos de Habilidad y no se considera como usar una Habilidad. <br> • Mejorado una vez, Loto Benefactor se convierte en Trascendencia. <br> • Mejorado dos veces, Loto Benefactor se convierte en Lanza Divina. <br> • Mejorado 3 veces, Loto Benefactor se convierte en Salto Fulgurante. <br> Al usar Lanza Divina o Salto Fulgurante, a partir del cuarto golpe, se gana 1 carga de Outroar antes de cada golpe. Cada carga de ''Outroar'' aumenta el DMG CRIT de Imbibitor Lunae en un 6.0% hasta un máximo de 4 cargas. Estas cargas duran hasta el final de su turno.</p>
-            <video autoplay loop muted src="../assets/video/Imbibitor Habilidad.mp4" style="width: 50%;"></video>
+            <video autoplay loop muted src="../assets/video/Habilidad Imbibitor.mp4" style="width: 50%;"></video>
             <h1 id="U">Ultimate</h1>
             <p><b>Ablutes All de Azure Aqua:</b> Utiliza un ataque de 3 golpes y causa daño imaginario del 180% del ATK de Imbibitor Lunae a un solo objetivo. Al mismo tiempo, causa daño imaginario igual al 84% del ATK de Imbibitor Lunae a enemigos adyacentes. Luego, obtiene 2 Squama Sacrosancta. Es posible tener hasta 3 Squama Sacrosancta, que se pueden usar para compensar el consumo de puntos de habilidad de Imbibitor Lunae. Consumir Squama Sacrosancta se considera equivalente a consumir puntos de habilidad.</p>
-            <video autoplay loop muted src="../assets/video/Imbibitor Ulti.mp4" style="width: 50%;"></video>
+            <video autoplay loop muted src="../assets/video/Ulti Imbibitor.mp4" style="width: 50%;"></video>
             <h1 id="P">Pasiva</h1>
             <p><b>Corazón Justo:</b> Después de cada golpe durante un ataque, Dan Heng - Imbibitor Lunae obtiene Corazón Justo, lo que aumenta su Daño en un 5.0%. Este efecto puede acumularse hasta 6 veces, y dura hasta el final de su turno.</p>
         </span>
