--- a/Personajes/Castorice.html
+++ b/Personajes/Castorice.html
@@ -66,17 +66,17 @@
         <span style="color: white;">
             <h1 id="A">Ataque basico</h1>
             <p><b>Lamento, Ondulación del Nethersea:</b> Inflige DMG Cuántico igual al 50% de la HP Máx de Castorice a un enemigo designado.</p>
-            <video src=""></video>
+            <video autoplay loop muted src="../assets/video/Atk basico Castorice.mp4" style="width: 50%;"></video>
             <h1 id="H">Habilidad</h1>
             <p><b>Silencio, Caricia de Wraithfly:</b> Consume el 30% de los HP actuales de todos los aliados. Inflige DMG Cuántico igual al 38% de los HP Máximos de Castorice a un enemigo designado y DMG Cuántico igual al 22% de los HP Máximos de Castorice a los objetivos adyacentes. Si los HP actuales son insuficientes, esta habilidad reducirá los HP a 1. Si Netherwing está en el campo de batalla, esta habilidad se convierte en "Garra Ósea, Abrazo del Doomdrake" en su lugar.  
     Garra Ósea, Abrazo del Doomdrake: Consume el 40% de los HP actuales de todos los aliados (excepto Netherwing). Castorice y Netherwing lanzan un ATAQUE Conjunto sobre el objetivo e infligen DMG Cuántico igual al 22.5% y 37.5% de los HP Máximos de Castorice a todos los enemigos. Si los HP actuales son insuficientes, usar la habilidad reducirá los HP a 1.</p>
-            <video src=""></video>
+            <video autoplay loop muted src="../assets/video/Habilidad Castorice.mp4" style="width: 50%;"></video>
             <h1 id="U">Ultimate</h1>
             <p><b>Doomshriek, Campana del Amanecer:</b> Invoca al memosprite Alas del Inframundo y avanza su acción en un 100%. Al mismo tiempo, crea el Territorio "País Perdido," que disminuye la RES de Todos los Tipos de todos los enemigos en un 15%. Si el efecto de Aumento de DMG del Talento de Castorice está activo, el efecto se extiende a Alas del Inframundo. Alas del Inframundo tiene una SPD inicial de 165 y un HP Máx establecido igual al 100% del máximo de "Nuevo Brote." Después de que Alas del Inframundo experimente 3 turnos o cuando su HP sea 0, desaparece y disipa el Territorio "País Perdido."</p>
-            <video src=""></video>
+            <video autoplay loop muted src="../assets/video/Ulti Castorice.mp4" style="width: 50%;"></video>
             <h1 id="P">Pasiva</h1>
             <p><b>Desolación a Través de las Palmas:</b> Max "Newbud" se basa en los niveles de todos los personajes en el campo de batalla. Por cada punto de HP perdido por todos los aliados, Castorice gana 1 punto de "Newbud." Cuando "Newbud" alcanza su máximo, se puede usar la Ultimate de Castorice. Cuando los aliados pierden HP, el daño infligido por Castorice y Netherwing aumenta en un 15%. Este efecto puede acumularse hasta 3 veces, durando 3 turno(s). Cuando Netherwing está en el campo, "Newbud" no se puede ganar a través de Talento, y el HP perdido por todos los aliados (excepto Netherwing) se convertirá en una cantidad igual de HP para Netherwing.</p>
-            <video src=""></video>
+            <video autoplay loop muted src="../assets/video/Pasiva Castorice.mp4" style="width: 50%;"></video>
         </span>
     </div>
 </body>
