--- a/Personajes/Sparkle.html
+++ b/Personajes/Sparkle.html
@@ -68,10 +68,10 @@
             <video autoplay loop muted src="../assets/video/Atk basico SparkleZ.mp4" style="width: 50%;"></video>
             <h1 id="H">Habilidad</h1>
             <p><b>Dreamdiver:</b> Aumenta el Daño CRÍTICO de un aliado objetivo en un 18% del Daño CRÍTICO de Sparkle más un 36%, durante 1 turno. Al mismo tiempo, adelanta la acción de este aliado en un 50%. Cuando Sparkle usa esta habilidad sobre sí misma, el efecto de Avance de Acción no se activará.</p>
-            <video autoplay loop muted src="../assets/video/Sparkle Habilidad.mp4" style="width: 50%;"></video>
+            <video autoplay loop muted src="../assets/video/Habilidad Sparkle.mp4" style="width: 50%;"></video>
             <h1 id="U">Ultimate</h1>
             <p><b>El Héroe de las Mil Caras:</b> Recupera 4 Puntos de Habilidad para el equipo y otorga Cifrado a todos los aliados. Para los aliados con Cifrado, cada acumulación del efecto de Aumento de Daño proporcionado por el Talento de Sparkle aumenta adicionalmente en un 8%, con una duración de 2 turnos.</p>
-            <video autoplay loop muted src="../assets/video/Sparkle Ulti.mp4" style="width: 50%;"></video>
+            <video autoplay loop muted src="../assets/video/Ulti Sparkle.mp4" style="width: 50%;"></video>
             <h1 id="P">Pasiva</h1>
             <p>Mientras Sparkle está en el campo de batalla, aumenta adicionalmente el número máximo de Puntos de Habilidad en 2. Cada vez que un aliado consume 1 Punto de Habilidad, el Daño infligido por todos los aliados aumenta en un 4.5%. Este efecto dura 2 turnos y puede acumularse hasta 3 veces.</p>
         </span>
