--- a/Inicio.html
+++ b/Inicio.html
@@ -19,7 +19,7 @@
         <a href="./Lore.html"><button style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;">Lore</button></a>
         <a href="./Tienda.html"><button style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;">Tienda</button></a>
     </header>
-    <div style="background-color: black; width: 50%; margin-top: 8%;margin-left: 25%; opacity: 90%;">
+    <div style="background-color: black; width: 50%; margin-top: 8%;margin-left: 25%; opacity: 90%; padding-bottom: 1%;">
         <img src="./assets/img/LogoHonkaiCyrene.png" alt="Logo de Honkai" style="width: 50%; margin-left: 25%;"><br>
         <h1 style="text-align: center; color: violet;">Bienvenido a la WikiFV de Honkai: Star Rail</h1>
         <table style="width: 100%; text-align: center;">
