--- a/Personajes.html
+++ b/Personajes.html
@@ -19,7 +19,7 @@
         <a href="./Lore.html"><button style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;">Lore</button></a>
         <a href="./Tienda.html"><button style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;">Tienda</button></a>
     </header>
-    <div style="background-color: black; width: 50%; margin-top: 8%;margin-left: 25%; opacity: 90%;">
+    <div style="background-color: black; width: 50%; margin-top: 8%;margin-left: 25%; opacity: 90%; padding-bottom: 1%;">
         <table style="text-align: center; color: white; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 20px; width: 100%;">
             <!--Castorice-->
             <!--Evernight-->
