--- a/Tienda.html
+++ b/Tienda.html
@@ -19,8 +19,54 @@
         <a href="./Lore.html"><button style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;">Lore</button></a>
         <a href="./Tienda.html"><button style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;">Tienda</button></a>
     </header>
-    <div style="background-color: black; width: 50%; margin-top: 8%;margin-left: 25%; opacity: 90%; padding-bottom: 1%;">
-
+    <div style="background-color: black; width: 60%; margin-top: 8%;margin-left: 20%; opacity: 90%; padding-bottom: 1%; padding: 1%;" >
+        <table style="text-align: center; color: white; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 20px; width: 100%;">
+            <tr>
+                <td><img src="./assets/img/Merch ica.png" width="100%"></td>
+                <td><img src="./assets/img/Merch sparkle.png" width="100%"></td>
+                <td><img src="./assets/img/Merch siete de marzo.png" width="100%"></td>
+            </tr>
+            <tr>
+                <td>Peluche de ica </td>
+                <td>Muñeca de sparkle</td>
+                <td>Figurite de siete de marzo</td>
+            </tr>
+            <tr style="font-size: small; text-align: left;">
+                <td> Muñeco de peluche Anime almohada ornamento modelo de dibujos animados accesorio</td>
+                <td>Figuras Sparkle Cosplay felpa Maumet modelo Original ornamento decoraciones Anime modelo mascota regalo</td>
+                <td>Lindo personaje del juego adornos PVC ABS figuras juego Merch</td>
+            </tr>
+            <tr>
+                <td><img src="./assets/img/Merch seele.png" width="100%"></td>
+                <td><img src="./assets/img/Merch sudadera.png" width="70%"></td>
+                <td><img src="./assets/img/Merch cas.png" width="100%"></td>
+            </tr>
+            <tr>
+                <td>Figurita de Seele</td>
+                <td>Sudadera con el logo de Honkai Star Rail</td>
+                <td>Figurita de Castorice</td>
+            </tr>
+            <tr style="font-size: small; text-align: left;">
+                <td>Embarcate en un inolvidable viaje con esta alegre figurita chibi de seele del juego Honkai Star Rail</td>
+                <td>Nuevo Honkai: Sudaderas con Capucha Star Rail Merch, Sudaderas de Moda de Manga Larga con Estampado Digital 3D, Jersey Casual</td>
+                <td>Figura de acción de Castorice de PVC de alta calidad, modelo de colección de personajes de anime, decoración de escritorio</td>
+            </tr>
+            <tr>
+                <td><img src="./assets/img/Merch peluches.png" width="100%"></td>
+                <td><img src="./assets/img/Merch carcasa.png" width="100%"></td>
+                <td><img src="./assets/img/Merch cyrene.png" width="100%"></td>
+            </tr>
+            <tr>
+                <td>Peluches del juego Honkai Star Rail</td>
+                <td>Carcasa para telefono</td>
+                <td>Figurite de Cyrene</td>
+            </tr>
+            <tr style="font-size: small; text-align: left;">
+                <td>Conjunto de peluches de personajes de Honkai Star Rail, suaves y adorables, perfectos para abrazar y decorar</td>
+                <td>Carcasa de teléfono para varios modelos, diseño exclusivo, protección completa contra golpes y arañazos</td>
+                <td>Figura de acción de Cyrene de PVC de alta calidad, modelo de colección de personajes de anime, decoración de escritorio</td>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
