Paginas de tienda

--- a/Paginas de la tienda/Pg2.html
+++ b/Paginas de la tienda/Pg2.html
@@ -19,5 +19,8 @@
         <a href="../Lore.html"><button style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;">Lore</button></a>
         <a href="../Tienda.html"><button style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;">Tienda</button></a>
     </header>
+    <div style="background-color: black; width: 60%; margin-top: 8%;margin-left: 20%; opacity: 90%; padding-bottom: 1%; padding: 1%;">
+        
+    </div>
 </body>
 </html>
