Primera pagina de la tienda

--- a/Paginas de la tienda/Pg1.html
+++ b/Paginas de la tienda/Pg1.html
@@ -20,7 +20,12 @@
         <a href="../Tienda.html"><button style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;">Tienda</button></a>
     </header>
     <div style="background-color: black; width: 60%; margin-top: 8%;margin-left: 20%; opacity: 90%; padding-bottom: 1%; padding: 1%;">
-
+        <table>
+            <tr>
+                <td rowspan="3"><img src="../assets/img/Merch ica.png" alt="Imagen del peluche de ica"></td>
+                <td><b style="font-size: xx-large; color: red;">51,31€</b><br><br><span style="font-size: x-large;">Peluche del personaje ica Honkai Star Rail</span><br><br><span style="font-size: large;"></span>Oficial Honkai Star Rail Little Lca muñeco de peluche Anime almohada ornamento modelo de dibujos animados</td>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
