--- a/Paginas de la tienda/Pg2.html
+++ b/Paginas de la tienda/Pg2.html
@@ -20,7 +20,12 @@
         <a href="../Tienda.html"><button style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;">Tienda</button></a>
     </header>
     <div style="background-color: black; width: 60%; margin-top: 8%;margin-left: 20%; opacity: 90%; padding-bottom: 1%; padding: 1%;">
-        
+        <table>
+            <tr>
+                <td rowspan="3"><img src="../assets/img/Merch sparkle.png" alt="Imagen de una figura de sparkle"></td>
+                <td><b style="font-size: xx-large; color: red;">71,34€</b><br><br><span style="font-size: x-large;">Figura del personaje Sparkle Honkai Star Rail</span><br><br><span style="font-size: large;"></span>Juego Honkai Star Rail figuras Sparkle Cosplay felpa Maumet modelo Original ornamento decoraciones Anime modelo mascota regalo</td>
+            </tr>
+        </table>
     </div>
 </body>
-</html>
+</html> 
